fix: use fr units to prevent double scrollbar

--- a/catena_vetus/main.css
+++ b/catena_vetus/main.css
@@ -17,8 +17,8 @@ Input.-valid:focus {
 }
 
 #results {
-    width: 100%;
-    height: 100%;
+    width: 1fr;
+    height: 1fr;
 }
 
 /*
